<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="48dp"
    android:paddingRight="48dp"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:paddingTop="25dp"
            app:hintTextAppearance="@style/AppearanceHintText">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords"
                android:theme="@style/AppearanceControlActive" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/name_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/name_text_layout"
            android:text="@string/wrong_name"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_text_layout"
            android:paddingTop="25dp"
            app:hintTextAppearance="@style/AppearanceHintText">

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="text"
                android:theme="@style/AppearanceControlActive" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_text_layout"
            android:paddingTop="25dp"
            app:hintTextAppearance="@style/AppearanceHintText">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/AppearanceControlActive" />


        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/email_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/email_text_layout"
            android:text="@string/wrong_email"
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_text_layout"
            android:paddingTop="25dp"
            app:hintTextAppearance="@style/AppearanceHintText"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:theme="@style/AppearanceControlActive" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/password_text_layout"
            android:layout_marginTop="8dp"
            android:background="@color/grey"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/text_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/finish"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="28dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/avatar"
            android:layout_toRightOf="@+id/avatar"
            android:text="@string/add_avatar"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/darkGrey"
            android:text="@string/fields_not_filled"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</ScrollView>
